--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="refresh" content="5;url=http://coco36d.github.io" />
     <title>自动跳转示例</title>
 </head>
-<body>
+<body onload="parent.location=' http://coco36d.github.io' ">
     <p>如果页面没有自动跳转，<a href="http://coco36d.github.io">点击这里</a>。</p>
 </body>
 </html>
