--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="5;url=http://coco36d.github.io" />
+    <meta http-equiv="refresh" content="5;url=http://vlog88.github.io" />
     <title>自动跳转示例</title>
 </head>
-<body onload="parent.location=' http://coco36d.github.io' ">
-    <p>如果页面没有自动跳转，<a href="http://coco36d.github.io">点击这里</a>。</p>
+<body onload="parent.location=' http://vlog88.github.io' ">
+    <p>如果页面没有自动跳转，<a href="http://vlog88.github.io">点击这里</a>。</p>
 </body>
 </html>
